--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 * { 
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
 body { 
     width: 100%;
     height: 100vh;
-    background-color: gray;
+    background-color: #242038;
 }
