added broken grid layout design

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,5 +5,6 @@
 <p><a [routerLink]='"\profile"'>nhan de chuyen link</a></p>
 <p><a [routerLink]='"\weather"'>Weather</a></p>
 <p><a [routerLink]='"\list"'>List</a></p>
+<p><a [routerLink]='"\gsap-example"'>gsap-example</a></p>
 
 <app-score></app-score>
