added covid page to keep in check with covid at Utah

--- a/src/app/gsap-example/gsap-example.component.html
+++ b/src/app/gsap-example/gsap-example.component.html
@@ -13,4 +13,7 @@
     <div class="item">
         <p>Motivate everyday!</p>
     </div>
+    <div class="item">
+        <p>Keep going!</p>
+    </div>
 </div>
