--- a/src/app/gsap-example/gsap-example.component.css
+++ b/src/app/gsap-example/gsap-example.component.css
@@ -1,4 +1,5 @@
 div.container { 
+    background-color: black;
     height: 100%;
     width: 100%;
     margin: auto;
@@ -7,6 +8,7 @@ div.container {
     grid-template-rows: repeat(4, 1fr);
 }
 div.container > div { 
+    z-index: 2;
     position: relative;
     margin: 10px;
     overflow: hidden;
@@ -18,15 +20,13 @@ div.container > div:nth-child(1) {
     grid-column: 1 / 4;
     grid-row: 1 / 3;
     overflow: visible;
-    z-index: -1;
+    z-index: 1;
     padding: 50px;
-    /* background-color: pink; */
 }
 div.container > div:nth-child(2) { 
     grid-column: 4 / 8;
     grid-row: 3 / 5;
-    z-index: -1;
-    /* background-color: green; */
+    z-index: 1;
 }
 div.container > div:nth-child(3) { 
     grid-column: 3 / 7; 
@@ -56,4 +56,13 @@ div.container > div:nth-child(4) {
     color: #e41bf6;
     font-size: 25px;
     text-shadow: 1px 1px 0px #322c58,2px 2px 0px #322c58,3px 3px 0px #322c58, 4px 4px 0px #322c58,5px 5px 0px #322c58  ;
+}
+
+div.container > div:nth-child(5) { 
+    grid-column: 4 / 6;
+    align-self: center;
+    overflow: visible;
+    font-size: 40px;
+    color: white;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
 }
