--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,16 @@
-<input #name type="text" placeholder="Nhập tên ..." name="username" />
-<input type="button" value="Login" (click)="onClick(name.value)" />
-<input type="button" value="Logout" (click)="onClick('')" />
-<h1>{{ username.username }}</h1>
-<p><a [routerLink]='"\profile"'>nhan de chuyen link</a></p>
-<p><a [routerLink]='"\weather"'>Weather</a></p>
-<p><a [routerLink]='"\list"'>List</a></p>
-<p><a [routerLink]='"\gsap-example"'>gsap-example</a></p>
+<div class="url">
+    <p><a [routerLink]='"\profile"'>Hello world</a></p>
+    <p><a [routerLink]='"\weather"'>Weather</a></p>
+    <p><a [routerLink]='"\list"'>List</a></p>
+    <p><a [routerLink]='"\gsap-example"'>Gsap-example</a></p>
+    <p><a [routerLink]='"\covid"'>Covid</a></p>
+</div>
+<div class="input">
+    <input #name type="text" placeholder="Nhập tên ..." name="username" />
+    <input type="button" value="Login" (click)="onClick(name.value)" />
+    <input type="button" value="Logout" (click)="onClick('')" />
+    <h1>{{ username.username }}</h1>
+</div>
+
 
 <app-score></app-score>
