--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 * { 
     padding: 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     margin: 0;
+    box-sizing: border-box;
 }
 body { 
     width: 100%;
     height: 100vh;
-    background-color: #242038;
+    background-color: gray;
+    /* background-color: #242038; */
 }
