--- a/src/app/news/news-list/news-list.component.html
+++ b/src/app/news/news-list/news-list.component.html
@@ -1,1 +1,10 @@
-<p>news-list works!</p>
+<div class="container">
+    <div *ngIf="this.news.news && this.news.news.status == 'ok' " class="news-container">
+        <div *ngFor="let article of this.news.news.articles">
+            <app-news-list-item class="news-item" [infoObject]="article"></app-news-list-item>
+        </div>
+    </div>
+    <div *ngIf="this.news.news && this.news.news.status != 'ok'">
+
+    </div>
+</div>
